# aquarius-plus-emulator

./: Audio.h  CMakeLists.txt  Config.cpp  Config.h  DCBlock.h  EmuState.cpp  EmuState.h  MemoryEditor.cpp  MemoryEditor.h  Midi.cpp  Midi.h  README.md  UI.cpp  UI.h  main.cpp  romfs_contents.h
esp32/: FPGA.cpp  FPGA.h  Keyboard.cpp  Keyboard.h  UartProtocol.cpp  UartProtocol.h  main.cpp  ovl_font.h  romfs_contents.h
esp32/DisplayOverlay/: DisplayOverlay.cpp  EspSettingsMenu.h  VersionMenu.h
esp32/FpgaCores/: FpgaCore.cpp
esp32/FpgaCores/Aquarius32/: CoreAquarius32.cpp
esp32/FpgaCores/AquariusPlus/: CoreAquariusPlus.cpp
esp32/FreeRtosMock/: FreeRtosMock.cpp  FreeRtosMock.h
esp32/USB/: USBHost.cpp
esp32/VFS/: SDCardVFS.cpp  VFS.h
esp32/mocks/: FreeRtosMock.cpp  FreeRtosMock.h  esp_err.h  esp_ota_ops.cpp  esp_ota_ops.h  nvs_flash.cpp  nvs_flash.h
fpga_cores/: EmuState.cpp  EmuState.h  SN76489.cpp  SN76489.h  Z80Core.cpp  Z80Core.h
fpga_cores/aq32/: Aq32Audio.cpp  Aq32Audio.h  Aq32EmuState.cpp  Aq32FmSynth.cpp  Aq32FmSynth.h  Aq32Pcm.cpp  Aq32Pcm.h  Aq32Video.cpp  Aq32Video.h  bootrom.h
fpga_cores/aq32/cpu/: riscv.cpp  riscv.h  riscv_util.cpp
fpga_cores/aqms/: AqmsEmuState.cpp  VDP.cpp  VDP.h  aqmsrom.h
fpga_cores/aqplus/: AY8910.cpp  AY8910.h  AqpEmuState.cpp  AqpEmuState.h  AqpVideo.cpp  AqpVideo.h
fpga_cores/aqua-8/: Aqua8EmuState.cpp  bootrom.h
lib/: Common.h
